--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -188,13 +188,13 @@
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <label for="inputEmail3" class="col-sm-12">Nombre(s): *</label>
                                             <div class="col-sm-12">
-                                                <input type="email" class="form-control" name="first_name" id="first_name" placeholder="" required value="Luis Miguel">
+                                                <input type="text" class="form-control" name="first_name" id="first_name" placeholder="" required value="Luis Miguel">
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <label for="inputEmail3" class="col-sm-12">Apellido(s): *</label>
                                             <div class="col-sm-12">
-                                                <input type="email" class="form-control" name="last_name" id="last_name" placeholder="" required value="Gutierrez Ramirez">
+                                                <input type="text" class="form-control" name="last_name" id="last_name" placeholder="" required value="Gutierrez Ramirez">
                                             </div>
                                         </div>
                                     </div>
@@ -360,10 +360,10 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="time_in_work" id="time_in_work" required>
                                                     <option value="">Seleccione una opción</option>
-                                                    <option value="">Menor a 1 año</option>
-                                                    <option value="" selected>de 1 a 5 años</option>
-                                                    <option value="">de 5 a 10 años</option>
-                                                    <option value="">Mayor a 10 años</option>
+                                                    <option value="1">Menor a 1 año</option>
+                                                    <option value="2" selected>de 1 a 5 años</option>
+                                                    <option value="3">de 5 a 10 años</option>
+                                                    <option value="4">Mayor a 10 años</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -373,19 +373,19 @@
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <label for="personal_reference_first_name" class="col-sm-12">Nombre(s): *</label>
                                             <div class="col-sm-12">
-                                                <input type="email" class="form-control" name="personal_reference_first_name" id="personal_reference_first_name" placeholder="" required value="Nombre ref">
+                                                <input type="text" class="form-control" name="personal_reference_first_name" id="personal_reference_first_name" placeholder="" required value="Nombre ref">
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <label for="personal_reference_last_name" class="col-sm-12">Apellido(s): *</label>
                                             <div class="col-sm-12">
-                                                <input type="email" class="form-control" name="personal_reference_last_name" id="personal_reference_last_name" placeholder="" required value="Apellido ref">
+                                                <input type="text" class="form-control" name="personal_reference_last_name" id="personal_reference_last_name" placeholder="" required value="Apellido ref">
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <label for="personal_reference_" class="col-sm-12">Teléfono celular: *</label>
                                             <div class="col-sm-12">
-                                                <input type="number" class="form-control" id="personal_reference_phone" name="personal_reference_phone" placeholder="" required value="phone ref">
+                                                <input type="number" class="form-control" id="personal_reference_phone" name="personal_reference_phone" placeholder="" required value="3015917564">
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
