--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -348,7 +348,7 @@
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <label for="work_type" class="col-sm-12">Tipo de actividad (opcional):</label>
                                             <div class="col-sm-12">
-                                                <select class="form-control" name="work_type" id="work_type" required>
+                                                <select class="form-control" name="work_type" id="work_type">
                                                     <option value="">Seleccione una actividad</option>
                                                     <option value="1">Empresario(a) Pyme</option>
                                                     <option value="2">Emprendedor(a)</option>
