Se crea el modelo para guardar datos del cliente

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -451,7 +451,7 @@
                                 <input type="text" id="phone_number" class="form-control">
                                 <button id="sms-btn" type="button" class="btn btn-default btn form-control" disabled>Enviar Código</button>
                             </p>
-                            <p id="confirm-sms-p" style="display:none;">
+                            <div id="confirm-sms-p" style="display:none;">
                                 <div class="col-xs-12 col-sm-4">
                                     Ingresa el codigo de confirmación que llegó a tu <strong>teléfono celular</strong>:
                                     <input type="text" id="confirmation_code" class="form-control">
@@ -463,7 +463,7 @@
                                 <div class="col-xs-12 col-sm-4">
                                     <button id="finish-btn" type="button" class="btn btn-default btn form-control" disabled>Finalizar solicitud</button>
                                 </div>
-                            </p>
+                            </div>
                         </div>
                     </div>
                 </div>
