Se crea el modelo para guardar datos del cliente

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -520,7 +520,7 @@
             }
         })
         .fail(function() {
-            //alert( "error" );
+            show_verification_error('Error al verificar el codigo enviado al correo electrónico, porfavor intente de nuevo.');
         });
     }
     function create_new_user(){
