--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -577,9 +577,9 @@
     </script>
     <script src="{% static 'js/fb.js' %}" charset="utf-8"></script>
     <script type="text/javascript" src="//platform.linkedin.com/in.js">
-        api_key:   '78w4d0nij9mmcg'
+        api_key:   78w4d0nij9mmcg
         authorize: true
-        lang:      'es_ES'
+        lang:      es_ES
     </script>
     <script src="{% static 'js/sinch.min.js' %}" charset="utf-8"></script>
     <script src="{% static 'js/bootstrap-datepicker.min.js' %}" charset="utf-8"></script>
