--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -580,18 +580,20 @@
         api_key:    78w4d0nij9mmcg
         authorize:  true
         lang:       es_ES
-        onLoad:     onLinkedInLoad
     </script>
     <script type="text/javascript">
 
     // Setup an event listener to make an API call once auth is complete
     function liAuth(){
+        $('.li-loading-icon').fadeIn();
        IN.User.authorize(function(){
            getProfileData();
        });
     }
-    function onLinkedInLoad() {
-        IN.Event.on(IN, "auth", getProfileData);
+
+    // Use the API call wrapper to request the member's basic profile data
+    function getProfileData() {
+        IN.API.Raw("/people/~").result(onSuccess).error(onError);
     }
 
     // Handle the successful return from the API call
@@ -604,10 +606,7 @@
         console.log(error);
     }
 
-    // Use the API call wrapper to request the member's basic profile data
-    function getProfileData() {
-        IN.API.Raw("/people/~").result(onSuccess).error(onError);
-    }
+
 
 </script>
     <script src="{% static 'js/sinch.min.js' %}" charset="utf-8"></script>
