--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -601,6 +601,10 @@
         $('.li-loading-icon').fadeOut();
         $('.li-completed-icon').fadeIn();
         console.log(data);
+        $('#first_name').val(data.first_name);
+        $('#last_name').val(data.last_name);
+        $('#continuar2').prop('disabled', false);
+
     }
 
     // Handle an error response from the API call
