--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -441,17 +441,13 @@
                         <div class="panel-body">
                             <div id="verification_error_msg" class="alert alert-danger"></div>
                             <div id="verification_success_msg" class="alert alert-success"></div>
-                            <div id="phone-p">
+                            <div id="confirm-sms-p">
                                 <p>
                                     Para que podamos autenticar que tú eres el dueño de la
-                                    cuenta de identificación, te enviaremos un código de 4
-                                    dígitos a tu número celular.
+                                    cuenta de identificación, te enviaremos dos códigos de autenticación.
+                                    Uno a tu número celular <strong id="final_phone"></strong> y otro a
+                                    tu correo electrónico <strong id="final_email"></strong>.
                                 </p>
-                                Ingresa tu número de telefono celular:
-                                <input type="text" id="phone_number" class="form-control">
-                                <button id="sms-btn" type="button" class="btn btn-default btn form-control" disabled>Enviar Código</button>
-                            </div>
-                            <div id="confirm-sms-p" style="display:none;">
                                 <div class="col-xs-12 col-sm-4">
                                     Ingresa el codigo de confirmación que llegó a tu <strong>teléfono celular</strong>:
                                     <input type="text" id="confirmation_code" class="form-control">
@@ -567,6 +563,7 @@
                 $('.ident-btn').addClass('btn-default');
                 $('.auten-btn').removeClass('btn-default');
                 $('.auten-btn').addClass('btn-primary');
+                send_sms();
             }
         })
         .fail(function() {
