--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -473,8 +473,8 @@
     var global_ajax_get_score_url       = '{% url 'api:ajax_get_score'%}';
     var global_ajax_check_email_code    = '{% url 'api:ajax_check_email_code'%}';
     var global_ajax_create_credit_user  = '{% url 'api:ajax_create_credit_user'%}';
-    var global_response_url             = '{{request.get.response_url}}';
-    var global_confirmation_url         = '{{request.get.confirm_url}}';
+    var global_response_url             = '{{request.GET.response_url}}';
+    var global_confirmation_url         = '{{request.GET.confirm_url}}';
 
     function ajax_get_score(){
         data = {
