--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -264,10 +264,12 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="civil_status" id="civil_status" required>
                                                     <option value="">Seleccione un estado</option>
-                                                    <option value="1" selected>Soltero(a)</option>
-                                                    <option value="2">Casado(a)</option>
-                                                    <option value="3">Union Libre</option>
-                                                    <option value="4">Divorciado(a)</option>
+                                                    <option value="1">Casado(a)</option>
+                                                    <option value="2">Divorciado(a)</option>
+                                                    <option value="3">Separado(a)</option>
+                                                    <option value="4">Soltero(a)</option>
+                                                    <option value="5">Union libre</option>
+                                                    <option value="6">Viudo(a)</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -276,11 +278,11 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="education_level" id="education_level" required>
                                                     <option value="">Seleccione un nivel</option>
-                                                    <option value="1">Media (secundaria)</option>
-                                                    <option value="2">Tecnico o Tecnologo</option>
-                                                    <option value="3" selected>Pregrado</option>
-                                                    <option value="4">Postgrado</option>
-                                                    <option value="5">Maestria</option>
+                                                    <option value="1">Primaria</option>
+                                                    <option value="2">Profesional</option>
+                                                    <option value="3">Secundaria</option>
+                                                    <option value="4">Técnico</option>
+                                                    <option value="5">Tecnológico</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -291,8 +293,8 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="vehicle" id="vehicle" required>
                                                     <option value="">Seleccione un estado</option>
-                                                    <option value="1" selected>si</option>
-                                                    <option value="2">no</option>
+                                                    <option value="1" selected>Si</option>
+                                                    <option value="2">No</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -310,9 +312,9 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="type_of_property" id="type_of_property" required>
                                                     <option value="">Seleccione un tipo</option>
-                                                    <option value="1">Propia</option>
+                                                    <option value="1">Arrendada</option>
                                                     <option value="2">Familiar</option>
-                                                    <option value="3" selected>En Arriendo</option>
+                                                    <option value="3">Propia</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -321,10 +323,13 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="time_in_property" id="time_in_property" required>
                                                     <option value="">Seleccione un estado</option>
-                                                    <option value="1">Menor a 1 año</option>
-                                                    <option value="2" selected>de 1 a 5 años</option>
-                                                    <option value="3">de 5 a 10 años</option>
-                                                    <option value="4">Mayor a 10 años</option>
+                                                    <option value="1">Menos de 1 mes</option>
+                                                    <option value="2">De 1 a 3 meses</option>
+                                                    <option value="3">De 3 a 6 meses</option>
+                                                    <option value="4">De 6 a 1 año</option>
+                                                    <option value="5">De 1 a 5 años</option>
+                                                    <option value="6">De 5 a 10 años</option>
+                                                    <option value="7">Más de 10 años</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -336,10 +341,10 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="work_activity" id="work_activity" required>
                                                     <option value="">Seleccione una actividad</option>
-                                                    <option value="1">Empleado(a)</option>
-                                                    <option value="2" selected>Independiente</option>
-                                                    <option value="3">Estudiante</option>
-                                                    <option value="4">Pensionado(a)</option>
+                                                    <option value="1">Empleado</option>
+                                                    <option value="2">Estudiante</option>
+                                                    <option value="3">Independiente</option>
+                                                    <option value="4">Jubilado</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -348,8 +353,13 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="work_type" id="work_type" required>
                                                     <option value="">Seleccione una actividad</option>
-                                                    <option value="1" selected>Empresario(a) Pyme</option>
-                                                    <option value="2">Emprendedor(a)</option>
+                                                    <option value="1">Aprendizaje</option>
+                                                    <option value="2">Jubilado</option>
+                                                    <option value="3">Obra o Labor</option>
+                                                    <option value="4">Ocasional</option>
+                                                    <option value="5">Prestación de Servicios</option>
+                                                    <option value="6">Término Fijo</option>
+                                                    <option value="7">Término Indefinido</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -358,10 +368,13 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="time_in_work" id="time_in_work" required>
                                                     <option value="">Seleccione una opción</option>
-                                                    <option value="1">Menor a 1 año</option>
-                                                    <option value="2" selected>de 1 a 5 años</option>
-                                                    <option value="3">de 5 a 10 años</option>
-                                                    <option value="4">Mayor a 10 años</option>
+                                                    <option value="1">Menos de 1 mes</option>
+                                                    <option value="2">De 1 a 3 meses</option>
+                                                    <option value="3">De 3 a 6 meses</option>
+                                                    <option value="4">De 6 a 1 año</option>
+                                                    <option value="5">De 1 a 5 años</option>
+                                                    <option value="6">De 5 a 10 años</option>
+                                                    <option value="7">Más de 10 años</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -412,9 +425,9 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="favorite_bank" id="favorite_bank" required>
                                                     <option value="">Seleccione una opción</option>
-                                                    <option value="1" selected>Bancolombia</option>
-                                                    <option value="2">Davivienda</option>
-                                                    <option value="3">BBVA</option>
+                                                    <option value="1">Bancolombia</option>
+                                                    <option value="2">BBVA</option>
+                                                    <option value="3">Davivienda</option>
                                                     <option value="4">Puntos Baloto</option>
                                                 </select>
                                             </div>
