--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,6 +14,13 @@ footer{
     position: fixed;
     margin: 10px 10px 20px;
 }
+#final-p{
+    background-color: #8BC34A;
+    padding: 10px;
+    border-radius: 5px;
+    color: black;
+    font-size: 16px;
+}
 .pasos{
     width: 300px;
 }
@@ -91,11 +98,15 @@ footer{
     width: 350px;
     padding: 10px 30px 5px;
 }
-.fb-loading-icon, .li-loading-icon, .fb-completed-icon, .li-completed-icon{
+.fb-loading-icon, .fb-completed-icon, .fb-error-icon, .li-loading-icon, .li-completed-icon, .li-error-icon{
     padding: 10px 30px 5px;
     display: none;
 }
-.fb-completed-icon, .li-completed-icon{
-    color: #94c947;
+.fb-completed-icon, .li-completed-icon,{
+    color: #94c947 !important;
+    font-size: 30px !important;
+}
+.fb-error-icon, .li-error-icon,{
+    color: #f44336;
     font-size: 30px;
 }
