change: se hacen cambios menores

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -91,11 +91,22 @@ footer{
     width: 350px;
     padding: 10px 30px 5px;
 }
-.fb-loading-icon, .li-loading-icon, .fb-completed-icon, .li-completed-icon{
+.fb-loading-icon, .fb-error-icon, .li-loading-icon, .fb-completed-icon, .li-completed-icon, .li-error-icon{
     padding: 10px 30px 5px;
     display: none;
 }
-.fb-completed-icon, .li-completed-icon{
+.fb-completed-icon, .fb-error-icon, .li-completed-icon, .li-error-icon{
     color: #94c947;
     font-size: 30px;
+}
+.form_checkbox_wrap{
+    display: inline-flex;
+    margin-left: 15px;
+}
+#form_error_msg{
+    display: none;
+}
+
+.error{
+    color: red;
 }
