change: se hacen cambios menores

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -431,9 +431,9 @@
                                         </div>
                                     </div>
                                     <div class="form_checkbox_wrap row">
-                                        <input class="checkbox" type="checkbox" name="policy" id="policy" required="">&nbsp;He leido, entinedo y acepto la <a href="javascript:;" target="_blank">política de tratamiento de datos</a>*
-                                        <div id="custom_error_policy"></div>
+                                        <input class="checkbox" type="checkbox" name="policy" id="policy" required="">&nbsp;He leido, entinedo y acepto la&nbsp;<a href="javascript:;" target="_blank"> política de tratamiento de datos</a>*
                                     </div>
+                                    <div id="custom_error_policy"></div>
                                 </form>
                             </div>
                             <div class="row" style="padding: 15px 30px;">
